--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 body {
-  background: #F7F9FC;
-  color: #575F7D;
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/221808/sky.jpg');
   font-family: 'Roboto', sans-serif;
   font-size: 17px;
   font-weight: lighter;
+  background-position: cover;
+  background-size: cover;
+  padding: 45px;
 }
 h1, h2, h3 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Verdana', sans-serif;
 }
 h1 {
   color: black;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 900;
 }
 h2 {
@@ -30,41 +32,72 @@ a:hover {
   color: black;
 }
 
-@media (max-width: 960px) {
-  /* For a screen < 960px, this CSS will be read */
-  .container {
-    width: 700px;
-  }
-}
-@media (max-width: 720px) {
-  /* For a screen < 720px, this CSS will be read */
-  .container {
-    width: 500px;
-  }
-}
-@media (max-width: 540px) {
-  /* For a screen < 540px, this CSS will be read */
-  .container {
-    width: 300px;
-  }
+p{
+  font-weight: bold;
 }
 
 .container {
-  width: 1200px;
+  width: 700px;
   margin: 0 auto;
 }
 
-.banner {
+.card-white {
   background-color: lightgrey;
-  background-image: url("https://source.unsplash.com/random");
-  padding: 240px 0;
+  padding: 30px;
   box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
   border-radius: 4px;
   margin: 20px 0px;
   text-align: center;
-  background-size: cover;
+}
+
+.img-circle {
+  border-radius: 50%;
+  padding: 50px;
+  transition: transform .2s;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+}
+
+.btn-blue {
+  background-color: #6B72E1;
+  color: white;
+  padding: 15px 20px;
+  border-radius: 4px;
+}
+
+.btn-blue:hover {
+  background-color: black;
+  color: white;
+}
+
+.list-inline {
+  list-style: none;
+  padding-left: 0px;
+}
+
+.list-inline li {
+  display: inline-block;
+  padding: 0px 20px;
+  font-size: 50px;
+  color: rgb(230, 230, 230);
+}
+
+}
+.list-inline i:hover {
+  color: black;
 }
 
 #introduction p {
   margin-bottom: 40px;
+}
+
+.zoom {
+
+}
+
+.img-circle:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5);
 }
